# tr-autonomy-1-tekkaonigiri

src/spinnything/: CMakeLists.txt  package.xml
src/spinnything/src/: predictedpos_pub.cpp
src/your_solution/src/: spin_slow_update.cpp
